fix: メニュー表のz-indexを調整

--- a/scss/project/_header.scss
+++ b/scss/project/_header.scss
@@ -1,15 +1,13 @@
 @use "../foundation/mixin" as *;
 
-header {
+.p-header {
     position: sticky;
     top: 0;
     left: 0;
     right: 0;
     z-index: 2;
     background-color: rgba(250, 250, 250);
-}
 
-.p-header {
     &__wrap {
         display: flex;
         justify-content: space-between;
@@ -105,7 +103,7 @@ header {
             padding: 32px;
             background-color: white;
             transition: all 0.5s;
-            z-index: 3;
+            z-index: 999;
         }
 
         &.open {
